fix(components): Fix algoria search panel z-indexing

--- a/src/_sass/components/_field.scss
+++ b/src/_sass/components/_field.scss
@@ -21,7 +21,6 @@
 
   &--icon {
     position: relative;
-    z-index: 0;
 
     #{$this}__input {
       padding-left: 40px;
